Bug #4955 reduced spacing in header logo section

--- a/docroot/themes/iucn_frontend/assets/css/style.css
+++ b/docroot/themes/iucn_frontend/assets/css/style.css
@@ -902,6 +902,7 @@ body.path-frontpage {
   margin-bottom: 12px;
   margin-right: 20px;
   margin-top: 12px;
+  padding-right: 0;
 }
 .navbar-nav > li > a.link-primary {
   background-color: #e67e22;
